<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/firstGrade"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/edt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/secondGrade"
        app:layout_constraintLeft_toRightOf="@+id/edt1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/thirdGrade"
        app:layout_constraintTop_toBottomOf="@+id/edt1"
        />

    <EditText
        android:id="@+id/edt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/fourthGrade"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/edt3"
        app:layout_constraintTop_toBottomOf="@+id/edt2"/>

    <EditText
        android:id="@+id/edt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/fifthGrade"
        app:layout_constraintTop_toBottomOf="@+id/edt3"/>

</android.support.constraint.ConstraintLayout>